--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ origin_material/DC_Properties.csv
 .idea
 .vscode
 test.py
+code/task2/DC_Crime_Preprocessed.csv
+vis/task2/DC_Crime_Preprocessed.csv
